--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "ant-design": "^1.0.0",
     "antd": "^5.21.4",
+    "axios": "^1.7.7",
     "icons": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
