--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ant-design": "^1.0.0",
     "antd": "^5.21.4",
     "axios": "^1.7.7",
+    "form": "^0.2.5",
     "icons": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
